--- a/myapp/package.json
+++ b/myapp/package.json
@@ -15,7 +15,7 @@
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "proxy": "https://comment-page.onrender.com:8080",
+  "proxy": "https://comment-page.onrender.com",
   "scripts": {
     "dev": "node server.js",
     "start": "react-scripts start",
